# UT2004_CMAKE

./: .gitignore  CMakeLists.txt  README.md
!_UnrealScript_And_Stuff/AssaultBP/Classes/: ASDefensiveVehicleFactory.uc
ALAudio/Inc/: ALAudio.h  ALAudioCapture.h  ALAudioSubsystem.h  ALAudioVoice.h
ALAudio/Src/: ALAudio.cpp  ALAudioCapture.cpp  ALAudioStream.cpp  ALAudioSubsystem.cpp  ALAudioVoice.cpp
BACKUP/Core/: CMakeLists.txt
BACKUP/Core/Inc/: Core.h  FFileManagerGeneric.h  FFileManagerUnix.h  FFileManagerWindows.h  FOutputDeviceFile.h  UnCorObj.h  UnGnuG.h  UnLinker.h  UnMath.h  UnMsg.h  UnName.h  UnObjBas.h  UnVcWin32.h
BACKUP/Core/Src/: UnAnsi.cpp  UnClass.cpp  UnCorSc.cpp  UnGCN.cpp  UnMisc.cpp  UnProp.cpp  UnUnix.cpp  dlfcn_macosx.h
Core/Inc/: FConfigCacheIni.h  FFileManagerAnsi.h  FMallocAnsi.h  OpCode.h  UnArc.h  UnBuild.h  UnClass.h  UnCoreNative.h  UnFile.h  UnNames.h  UnObjBas.h  UnObjVer.h  UnStack.h  UnTemplate.h  UnType.h  UnVcWin32.h
Core/Src/: Core.cpp  Core.vcproj  Core.vcxproj  Core.vcxproj.filters  UnArc.cpp  UnCoreNet.cpp  UnLinker.cpp  UnObj.cpp  UnPSX2.cpp  UnVcWin32.cpp
D3D9Drv/Src/: D3D9Drv.h  D3D9RenderDevice.cpp  D3D9RenderDevice.h  xD3D9RenderInterface.cpp
D3DDrv/Src/: D3DDrv.cpp  D3DDrv.h  D3DRenderDevice.cpp  xD3DRenderInterface.cpp
Editor/Inc/: Editor.h  EditorClasses.h  UnDumpConfigCommandlet.h
Editor/Src/: Editor.cpp  EditorPrivate.h  TTFontImport.cpp  UBatchExportCommandlet.cpp  UConformCommandlet.cpp  UContentCommandlets.cpp  UDumpIntCommandlet.cpp  UMakeCommandlet.cpp  UPS2ConvertCommandlet.cpp  UStripSourceCommandlet.cpp  USurfaceTypeCommandlet.cpp  UTextureInfoCommandlet.cpp  UTextureLODCommandlet.cpp  UTextureStripCommandlet.cpp  UnBsp.cpp  UnDumpConfigCommandlet.cpp  UnEdExp.cpp  UnEdFact.cpp  UnEdSrv.cpp  UnEdTran.cpp  UnParams.cpp  UnScrCom.cpp  UnScrCom.h  UnStaticMesh.cpp  UnVisi.cpp  xObjExporters.h  xTextureConversions.cpp
Engine/Inc/: AActor.h  ANavigationPoint.h  APawn.h  AProjectile.h  Engine.h  EngineClasses.h  LIPSincSupport.h  UnAudio.h  UnCDKey.h  UnCacheManager.h  UnCamera.h  UnCanvas.h  UnChan.h  UnConn.h  UnEngine.h  UnEngineWin.h  UnFluidSurface.h  UnNet.h  UnObj.h  UnPackageCheckInfo.h  UnPrim.h  UnRenDev.h  UnRenderResource.h  UnRenderUtil.h  UnSkeletalMesh.h  UnStats.h  UnTerrain.h  UnTex.h
Engine/Src/: AFileLog.cpp  AxWeatherEffect.cpp  EnginePrivate.h  KFarfield.cpp  KIntersectFunctions.cpp  KPhysic.cpp  KScript.cpp  KTriListGen.cpp  KUtils.cpp  KarmaSupport.cpp  LIPSincSupport.cpp  METool_stub.cpp  UExportCacheCommandlet.cpp  UnActor.cpp  UnAudio.cpp  UnCDKey.cpp  UnCacheManager.cpp  UnCamera.cpp  UnCameraEffects.cpp  UnCanvas.cpp  UnChan.cpp  UnConn.cpp  UnController.cpp  UnDemoPenLev.cpp  UnDemoRec.cpp  UnEngine.cpp  UnFluidSurface.cpp  UnGame.cpp  UnLevAct.cpp  UnLevTic.cpp  UnLevel.cpp  UnModel.cpp  UnModelLight.cpp  UnNavigationPoint.cpp  UnOctree.cpp  UnPackageCheckInfo.cpp  UnParticleEmitter.cpp  UnParticleSystem.cpp  UnPath.cpp  UnPawn.cpp  (+23 more)
Engine/Src.bak/: Engine.vcproj  Engine.vcxproj  Engine.vcxproj.filters  makefile
Fire/Inc/: UnFractal.h
Help/: BonusPackReadme.txt  README.SMT.TXT  README.TMT.TXT
IFC/Inc/: IFC.h
IpDrv/Inc/: GameSpyClasses.h  HTTPDownload.h  InternetLink.h  IpDrvClasses.h  UnSocket.h  UnTcpNetDriver.h
IpDrv/Src/: HTTPDownload.cpp  InternetLink.cpp  MasterServerClient.cpp  MasterServerUplink.cpp  TcpNetDriver.cpp  UnSocket.cpp
Launch/Src/: Launch.cpp
Metoolkit/include/: EM_ME_Define.h
Onslaught/Inc/: OnslaughtClasses.h
Onslaught/Src/: ONSChopperCraft.cpp  ONSHoverCraft.cpp  ONSPlaneCraft.cpp  ONSTreadCraft.cpp  ONSVehicle.cpp  ONSWeapon.cpp  ONSWheeledCraft.cpp  Onslaught.cpp
OpenGLDrv/Inc/: OpenGLDrv.h  OpenGLFuncs.h  OpenGLRenderDevice.h  OpenGLRenderInterface.h  OpenGLResource.h  glext.h
OpenGLDrv/Src/: OpenGLMaterialState.cpp  OpenGLRenderDevice.cpp  OpenGLRenderInterface.cpp  OpenGLResource.cpp
SDLDrv/Inc/: SDLDrv.h
SDLDrv/Src/: SDLClient.cpp  SDLViewport.cpp
Setup/Src/: Setup.cpp  USetupDefinition.cpp  USetupDefinitionWindows.cpp
Speech/Inc/: sphelper.h
System/: BWCache.ini  BallisticProV55.ini  Build.ini  CacheRecords.ucl  DM-Sateca-SE.ucl  DefUser.ini  Default.ini  GUI2K4.det  GUI2K4.est  GUI2K4.frt  GUI2K4.int  GUI2K4.itt  Manifest.ini  Manifest.int  MapVoteHistory.ini  OnslaughtBP.ucl  Packages.md5  SCS_ASbattle.u  ServerFilters.ini  UT2004_Game.ini  UT2K4Assault.int  ZoundClient.ini  unrealed.ini  ut2004-win64.ini  xaplayersl3.upl
UCC/Src/: UCC.cpp
UT2004_CMAKE/: README.md
UTV2004/Inc/: BunchDelayer.h  DemoPassthrough.h  EpicInclude.h  ReplicatorEngine.h  UTVPackageMap.h  UTVUplink.h  UtvChannel.h
UTV2004/Src/: BunchDelayer.cpp  DemoPassthrough.cpp  ReplicatorEngine.cpp  UTVCommandlet.cpp  UTVPackageMap.cpp  UTVRemoteControll.cpp  UTVRemoteControll.h  UTVUplink.cpp  UtvChannel.cpp
UWeb/Inc/: UWeb.h
UWeb/Src/: UWebNative.cpp  WebServer.cpp
UnrealEd/Inc/: BottomBarStandard.h  BrowserGroup.h  BrowserMesh.h  BrowserMusic.h  BrowserPrefab.h  BrowserSound.h  BrowserStaticMesh.h  BrowserTexture.h  DlgBrushBuilder.h  DlgBrushImport.h  DlgDepth.h  DlgGeneric.h  DlgLoadErrors.h  DlgMapImport.h  DlgNewMaterial.h  DlgRename.h  DlgTexReplace.h  DlgViewportConfig.h  EmitterWizard.h  ParticleEditor.h  ParticleEditorComponent.h  ParticleEditorTools.h  TerrainEditSheet.h  UnrealEd.h  UnrealEdClasses.h  UnrealEdMisc.h
UnrealEd/Src/: BrowserAnimation.cpp  BrowserLIPSinc.cpp  DlgArray.h  EdHook.cpp  EmitterWizard.cpp  Main.cpp  ParticleEditor.cpp  ParticleEditorComponent.cpp  ParticleEditorTab.cpp  ParticleEditorToolLabel.cpp  ParticleEditorTools.cpp  SurfacePropSheet.cpp  UnEdCam.cpp  UnEdRend.cpp  ViewportFrame.cpp
Vorbis/speex/: CMakeLists.txt
WinDrv/Inc/: WinDrv.h
WinDrv/Src/: UnDebuggerCore.cpp  WinClient.cpp  WinDrv.cpp  WinDrv_Stubs.cpp  WinSpeech.cpp  WinViewport.cpp
Window/Inc/: Window.h
Window/Src/: Controls.cpp  Properties.cpp  Window.cpp
XGame/Inc/: XGameClasses.h
XGame/Src/: XUtil.cpp
XInterface/Inc/: XInterfaceClasses.h
XInterface/Src/: GUILists.cpp  UnGUICore.cpp
zlib/: CMakeLists.txt
(+397 files in other folders)
